Add baud rate makefile interworking

--- a/MEGA32A_UART_LIBRARY/Makefile
+++ b/MEGA32A_UART_LIBRARY/Makefile
@@ -1,4 +1,9 @@
 SOURCES=MEGA32A_UART_LIBRARY.cpp
 LIBNAME=UART
 
+ifdef USART_BAUD
+CFLAGS=-DUSART_BAUD=$(USART_BAUD)
+DEPFLAGS=-DUSART_BAUD=$(USART_BAUD)
+endif
+
 include ../../../atmega.mk
